@startuml

title __TEST_MOCK_UBFLIX's Class Diagram__\n

  namespace ub.edu.controller {
    class ub.edu.controller.Controller {
    }
  }
  

  namespace ub.edu.model {
    class ub.edu.model.CarteraClients {
    }
  }
  

  namespace ub.edu.model {
    class ub.edu.model.Client {
    }
  }
  

  namespace ub.edu.model {
    class ub.edu.model.Serie {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAO {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOClient {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOSerie {
    }
  }
  

  namespace ub.edu.resources.dao {
    namespace MOCK {
      class ub.edu.resources.dao.MOCK.DAOClientMOCK {
      }
    }
  }
  

  namespace ub.edu.resources.dao {
    namespace MOCK {
      class ub.edu.resources.dao.MOCK.DAOSerieMOCK {
      }
    }
  }
  

  namespace ub.edu.resources.service {
    interface ub.edu.resources.service.AbstractFactoryData {
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.DataService {
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.FactoryMOCK {
    }
  }
  

  ub.edu.controller.Controller o-- ub.edu.model.CarteraClients : carteraClients
  ub.edu.controller.Controller o-- ub.edu.resources.service.DataService : dataService
  ub.edu.controller.Controller o-- ub.edu.resources.service.AbstractFactoryData : factory
  ub.edu.resources.dao.MOCK.DAOClientMOCK .up.|> ub.edu.resources.dao.DAOClient
  ub.edu.resources.dao.MOCK.DAOSerieMOCK .up.|> ub.edu.resources.dao.DAOSerie
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOClient : clientDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOSerie : serieDAO
  ub.edu.resources.service.FactoryMOCK .up.|> ub.edu.resources.service.AbstractFactoryData
ub.edu.model.CarteraClients *-- ub.edu.model.Client : conté


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
